--- a/public/index.html
+++ b/public/index.html
@@ -3,16 +3,16 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <link rel="icon" href="%PUBLIC_URL%/icon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
+  <meta name="description" content="Todo App" />
   <style>
     * {
       margin: 0;
     }
   </style>
-  <title>React Challenge</title>
+  <title>Todo App</title>
 </head>
 
 <body>
